--- a/src/app/components/auth-components/register-page/register-page.component.html
+++ b/src/app/components/auth-components/register-page/register-page.component.html
@@ -52,6 +52,6 @@
 
     </form>
 
-    <img style="align-self: stretch" class="login-img" src="../../../assets/images/register_image.webp"/>
+    <img style="align-self: stretch" class="login-img" src="../../../../assets/images/register_image.webp"/>
   </div>
 </div>
