Added question updating deleting functionality.

--- a/src/app/components/auth-components/register-page/register-page.component.html
+++ b/src/app/components/auth-components/register-page/register-page.component.html
@@ -46,7 +46,7 @@
 
         <button class="action-main-button" >Create account</button>
 
-        <p routerLink="/login" class="link">No account yet? Register here</p>
+        <p routerLink="/login" class="link">Already have an account? Login here.</p>
       </div>
 
 
