--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
+@import '~ngx-toastr/toastr';
 @import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Dancing+Script:wght@500&family=Inter:wght@200;300;400&family=Montserrat:wght@200;300&family=Open+Sans&family=Oswald:wght@200;500&family=Playfair+Display&family=Roboto+Mono:ital,wght@1,200;1,400&family=Rubik:wght@300;400;500&display=swap');
 * {
   box-sizing: border-box;
@@ -51,6 +52,8 @@ button:focus {outline:0 !important;}
   font-size: 1rem;
   transition: all 0.2s linear;
 }
+
+
 
 .action-main-button:hover {
   background-color: #212529;
@@ -109,3 +112,9 @@ h1 {
  mat-sidenav-content {
    padding: 0 !important;
  }
+
+.dashboard-con {
+   padding: 2.8rem 3.4rem;
+}
+
+
