--- a/src/app/components/admin-components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/admin-components/admin-dashboard/admin-dashboard.component.html
@@ -1,3 +1,88 @@
 <div class="dashboard-con">
-  <h1>HELLO ADMIN KUBA</h1>
+  <h1>Admin Dashboard</h1>
+
+  <div class="table-con">
+    <div style="width: 100%">
+      <p class="table-name">Question</p>
+    </div>
+
+    <hr/>
+
+    <div class="flex space-between">
+      <div class="flex align-center" style="gap: 0.4rem">
+
+        <mat-form-field appearance="fill">
+          <mat-label>Per page</mat-label>
+          <mat-select [value]="pageSize" (selectionChange)="changePerPage($event.value)">
+            <mat-option *ngFor="let number of perPage" [value]="number" >
+              {{ number }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+
+      <form >
+        <div>
+          <div class="flex align-center">
+
+            <mat-form-field appearance="outline" color="primary">
+              <mat-label>Search by username</mat-label>
+              <input matInput placeholder="Search for users..." name="keyword" />
+              <button matSuffix type="submit">
+                <mat-icon  color="primary" matSuffix>search</mat-icon>
+              </button>
+            </mat-form-field>
+
+          </div>
+        </div>
+      </form>
+    </div>
+    <table mat-table [dataSource]="users" class="mat-elevation-z8" style="width: 100%;">
+      <ng-container matColumnDef="username">
+        <th mat-header-cell *matHeaderCellDef> Username </th>
+        <td mat-cell *matCellDef="let user"> {{user?.username}} </td>
+      </ng-container>
+
+
+      <ng-container matColumnDef="fullName">
+        <th mat-header-cell *matHeaderCellDef> Full Name </th>
+        <td mat-cell *matCellDef="let user"> {{ user?.firstName }} {{ user?.lastName}} </td>
+      </ng-container>
+
+
+      <ng-container matColumnDef="role">
+        <th mat-header-cell *matHeaderCellDef> Role </th>
+        <td mat-cell *matCellDef="let user"> <strong>{{user.roleName}}</strong> </td>
+      </ng-container>
+
+
+      <ng-container matColumnDef="update" >
+        <th mat-header-cell *matHeaderCellDef> Update </th>
+        <td mat-cell *matCellDef="let user">
+          <mat-icon color="primary" class="update-icon" [routerLink]="['/home', 'admin', 'user', user.id]">build</mat-icon>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef> Delete</th>
+        <td mat-cell *matCellDef="let user" (click)="onUserDeleting(user)">
+          <mat-icon color="warn" class="delete-icon">delete</mat-icon>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+      <div class="flex space-between" *ngIf="users.length > 0">
+        <p>Showing {{ pageNumber }} of {{ totalPages }} pages ({{ pageSize}} per page)</p>
+        <ngb-pagination
+          [collectionSize]="totalElements"
+          [(page)]="pageNumber"
+          [pageSize]="pageSize"
+          [boundaryLinks]="true"
+          (pageChange)="loadData()">
+        </ngb-pagination>
+      </div>
+  </div>
 </div>
