--- a/src/app/components/teacher-components/questions-list/questions-list.component.html
+++ b/src/app/components/teacher-components/questions-list/questions-list.component.html
@@ -5,31 +5,35 @@
       <div style="width: 100%">
         <p class="table-name">Question</p>
       </div>
+      <hr/>
       <div class="flex space-between">
         <div class="flex align-center" style="gap: 0.4rem">
 
             <mat-form-field appearance="fill">
               <mat-label>Per page</mat-label>
-              <mat-select >
-                <mat-option *ngFor="let number of perPage" [value]="number">
+              <mat-select [value]="pageSize" (selectionChange)="changePerPage($event.value)">
+                <mat-option *ngFor="let number of perPage" [value]="number" >
                   {{ number }}
                 </mat-option>
               </mat-select>
             </mat-form-field>
           </div>
 
-          <div>
-            <form>
-              <div class="flex align-center">
+         <form (ngSubmit)="searchForQuestionsByKeyword()">
+           <div>
+             <div class="flex align-center">
 
-                <mat-form-field appearance="outline" color="primary">
-                  <mat-label>Search: </mat-label>
-                  <input matInput placeholder="Search for questions..."/>
+               <mat-form-field appearance="outline" color="primary">
+                 <mat-label>Search: </mat-label>
+                 <input matInput placeholder="Search for questions..." name="keyword" [(ngModel)]="keyword"/>
+                 <button matSuffix type="submit">
+                   <mat-icon  color="primary" matSuffix>search</mat-icon>
+                 </button>
+               </mat-form-field>
 
-                </mat-form-field>
-              </div>
-            </form>
-          </div>
+             </div>
+           </div>
+         </form>
       </div>
 
       <p class="alert alert-warning" *ngIf="questions.length === 0">No questions there.</p>
@@ -46,19 +50,36 @@
         </ng-container>
 
         <!-- Symbol Column -->
-        <ng-container matColumnDef="modify">
-          <th mat-header-cell *matHeaderCellDef> Modify </th>
+        <ng-container matColumnDef="update">
+          <th mat-header-cell *matHeaderCellDef> Update </th>
           <td mat-cell *matCellDef="let question">
-            <div class="flex" style="gap: 1.2rem">
-              <button class="btn btn-dark" [routerLink]="['/home', 'teacher', 'question', question.id]">Update</button>
-              <button class="btn btn-danger" (click)="onDeleting(question?.id)">Delete</button>
-            </div>
+            <mat-icon [routerLink]="['/home', 'teacher', 'question', question.id]" color="primary" class="update-icon">build</mat-icon>
           </td>
         </ng-container>
+
+        <ng-container matColumnDef="delete">
+          <th mat-header-cell *matHeaderCellDef> Delete </th>
+          <td mat-cell *matCellDef="let question">
+            <mat-icon (click)="onDeleting(question?.id)" class="delete-icon" color="warn">delete</mat-icon>
+          </td>
+        </ng-container>
+
+
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
+
+      <div class="flex space-between" *ngIf="questions.length > 0">
+        <p>Showing {{ pageNumber }} of {{ totalPages }} pages ({{ pageSize}} per page)</p>
+        <ngb-pagination
+          [collectionSize]="totalElements"
+          [(page)]="pageNumber"
+          [pageSize]="pageSize"
+          [boundaryLinks]="true"
+          (pageChange)="loadData()">
+        </ngb-pagination>
+      </div>
 
 
     </div>
