--- a/src/app/components/teacher-components/teacher-dashboard/teacher-dashboard.component.html
+++ b/src/app/components/teacher-components/teacher-dashboard/teacher-dashboard.component.html
@@ -1,4 +1,86 @@
 <div class="dashboard-con">
-  <h1>Teacher dashboard</h1>
-  <p>LIST</p>
+  <h1>Teacher Dashboard</h1>
+  <div class="table-con">
+    <div style="width: 100%">
+      <p class="table-name">Question</p>
+    </div>
+
+    <hr/>
+
+    <div class="flex space-between">
+      <div class="flex align-center" style="gap: 0.4rem">
+
+        <mat-form-field appearance="fill">
+          <mat-label>Per page</mat-label>
+          <mat-select [value]="pageSize" (selectionChange)="changePerPage($event.value)">
+            <mat-option *ngFor="let number of perPage" [value]="number" >
+              {{ number }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+
+      <form >
+        <div>
+          <div class="flex align-center">
+
+            <mat-form-field appearance="outline" color="primary">
+              <mat-label>Search by student</mat-label>
+              <input matInput placeholder="Search for sessions..." name="keyword" />
+              <button matSuffix type="submit">
+                <mat-icon  color="primary" matSuffix>search</mat-icon>
+              </button>
+            </mat-form-field>
+
+          </div>
+        </div>
+      </form>
+    </div>
+
+    <table mat-table [dataSource]="sessions" class="mat-elevation-z8" style="width: 100%;">
+      <ng-container matColumnDef="studentName">
+        <th mat-header-cell *matHeaderCellDef> Student name </th>
+        <td mat-cell *matCellDef="let session"> {{session?.userFirstName }} {{ session?.userLastName}} </td>
+      </ng-container>
+
+
+      <ng-container matColumnDef="subjectName">
+        <th mat-header-cell *matHeaderCellDef> Subject </th>
+        <td mat-cell *matCellDef="let session"> {{ session?.subjectName }}  </td>
+      </ng-container>
+
+
+      <ng-container matColumnDef="startTime">
+        <th mat-header-cell *matHeaderCellDef> Start Time </th>
+        <td mat-cell *matCellDef="let session"> {{ getFormattedDate(session?.createdAt)}}</td>
+      </ng-container>
+
+
+      <ng-container matColumnDef="duration" >
+        <th mat-header-cell *matHeaderCellDef> Duration </th>
+        <td mat-cell *matCellDef="let session">{{ session?.durationTime}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="percentageScore" >
+        <th mat-header-cell *matHeaderCellDef> Percentage Score </th>
+        <td mat-cell *matCellDef="let session">{{ session?.percentageScore}}</td>
+      </ng-container>
+
+
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+    <div class="flex space-between" *ngIf="sessions.length > 0">
+      <p>Showing {{ pageNumber }} of {{ totalPages }} pages ({{ pageSize}} per page)</p>
+      <ngb-pagination
+        [collectionSize]="totalElements"
+        [(page)]="pageNumber"
+        [pageSize]="pageSize"
+        [boundaryLinks]="true"
+        (pageChange)="loadData()">
+      </ngb-pagination>
+    </div>
+  </div>
 </div>
