--- a/src/app/components/teacher-components/teacher-dashboard/teacher-dashboard.component.html
+++ b/src/app/components/teacher-components/teacher-dashboard/teacher-dashboard.component.html
@@ -20,24 +20,25 @@
         </mat-form-field>
       </div>
 
-      <form >
+
         <div>
           <div class="flex align-center">
 
-            <mat-form-field appearance="outline" color="primary">
-              <mat-label>Search by student</mat-label>
-              <input matInput placeholder="Search for sessions..." name="keyword" />
-              <button matSuffix type="submit">
-                <mat-icon  color="primary" matSuffix>search</mat-icon>
-              </button>
+            <mat-form-field appearance="fill">
+              <mat-label>Subject</mat-label>
+              <mat-select [value]="selectedSubject" (selectionChange)="filterBySubject($event.value)">
+                <mat-option *ngFor="let subject of subjects" [value]="subject.name" >
+                  {{ subject.name }}
+                </mat-option>
+              </mat-select>
             </mat-form-field>
 
           </div>
         </div>
-      </form>
+
     </div>
 
-    <table mat-table [dataSource]="sessions" class="mat-elevation-z8" style="width: 100%;">
+    <table mat-table [dataSource]="sessions" class="mat-elevation-z8" style="width: 100%;" *ngIf="sessions.length > 0">
       <ng-container matColumnDef="studentName">
         <th mat-header-cell *matHeaderCellDef> Student name </th>
         <td mat-cell *matCellDef="let session"> {{session?.userFirstName }} {{ session?.userLastName}} </td>
@@ -71,6 +72,8 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+
+    <p *ngIf="sessions.length === 0" class="alert alert-warning" style="width: 100%">No sessions for this criteria.</p>
 
     <div class="flex space-between" *ngIf="sessions.length > 0">
       <p>Showing {{ pageNumber }} of {{ totalPages }} pages ({{ pageSize}} per page)</p>
