Added charts for student participation in sessions and score results

--- a/src/app/components/home-components/user-profile-bar/user-profile-bar.component.html
+++ b/src/app/components/home-components/user-profile-bar/user-profile-bar.component.html
@@ -5,10 +5,16 @@
   </div>
 
   <mat-menu #appMenu="matMenu">
+    <button mat-menu-item (click)="onProfileSettingsNavigating()">
+      <mat-icon>settings</mat-icon>
+      Profile settings
+
+    </button>
     <button mat-menu-item (click)="logout()">
       <mat-icon>logout</mat-icon>
       Logout
     </button>
+
   </mat-menu>
 
 
