--- a/src/app/components/student-compontents/student-dashboard/student-dashboard.component.html
+++ b/src/app/components/student-compontents/student-dashboard/student-dashboard.component.html
@@ -7,18 +7,18 @@
     </div>
     <div class="flex-col align-center">
       <circle-progress
-        [percent]="latestSession?.percentageScore.replace('%', '')"
+        [percent]="latestSession?.percentageScore"
         [radius]="100"
         [outerStrokeWidth]="16"
         [innerStrokeWidth]="8"
-        [outerStrokeColor]="latestSession?.percentageScore.replace('%', '') >= 50 ? '#78C000' : '#e03131'"
-        [innerStrokeColor]="latestSession?.percentageScore.replace('%', '') >= 50 ? '#C7E596' : '#FF6347'"
+        [outerStrokeColor]="latestSession?.percentageScore >= 50 ? '#78C000' : '#e03131'"
+        [innerStrokeColor]="latestSession?.percentageScore >= 50 ? '#C7E596' : '#FF6347'"
         [animation]="true"
         [animationDuration]="300"
         subtitle="Latest score"
         [showTitle]="true"
       ></circle-progress>
-      <p *ngIf="latestSession?.percentageScore.replace('%', '') >= 50 else failed"
+      <p *ngIf="latestSession?.percentageScore >= 50 else failed"
          class="passed-label">Passed</p>
       <ng-template #failed>
         <p class="failed-label">Failed</p>
