--- a/src/app/components/teacher-components/teacher-dashboard/teacher-dashboard.component.html
+++ b/src/app/components/teacher-components/teacher-dashboard/teacher-dashboard.component.html
@@ -39,9 +39,10 @@
     </div>
 
     <table mat-table [dataSource]="sessions" class="mat-elevation-z8" style="width: 100%;" *ngIf="sessions.length > 0">
-      <ng-container matColumnDef="studentName">
+      <ng-container matColumnDef="studentName" >
         <th mat-header-cell *matHeaderCellDef> Student name </th>
-        <td mat-cell *matCellDef="let session"> {{session?.userFirstName }} {{ session?.userLastName}} </td>
+        <td [routerLink]="['/home', 'student', 'profile', session?.userId]"  class="username-data"
+            mat-cell *matCellDef="let session"> {{session?.userFirstName }} {{ session?.userLastName}} </td>
       </ng-container>
 
 
@@ -64,7 +65,7 @@
 
       <ng-container matColumnDef="percentageScore" >
         <th mat-header-cell *matHeaderCellDef> Percentage Score </th>
-        <td mat-cell *matCellDef="let session">{{ session?.percentageScore}}</td>
+        <td mat-cell *matCellDef="let session">{{ session?.percentageScore}}%</td>
       </ng-container>
 
 
