--- a/src/app/components/home-components/home-page/home-page.component.html
+++ b/src/app/components/home-components/home-page/home-page.component.html
@@ -3,6 +3,8 @@
 
   <div class="flex-col" style="width: 100%">
     <app-user-profile-bar></app-user-profile-bar>
-    <router-outlet></router-outlet>
+    <div style="padding: 4rem 0rem">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
