--- a/src/app/components/home-components/user-profile-bar/user-profile-bar.component.css
+++ b/src/app/components/home-components/user-profile-bar/user-profile-bar.component.css
@@ -7,6 +7,10 @@
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   height: 10vh;
   margin-bottom: 2rem;
+  position: fixed;
+  right: 0; top: 0;
+  /*z-index: 10;*/
+  background-color: #fff;
 }
 
 .flex {
