Added questions download functionality

--- a/src/app/components/student-compontents/session-quiz-form/session-quiz-form.component.html
+++ b/src/app/components/student-compontents/session-quiz-form/session-quiz-form.component.html
@@ -1,7 +1,7 @@
 <div class="dashboard-con flex-col align-center">
   <div *ngIf="questions.length > 0"  style="width: 75%; margin-bottom: 1.2rem">
     <div class="flex space-between align-center">
-      <h1>Test on {{ currentSubject}}</h1>
+      <h1>Test on {{ currentSubject}} (consists of {{questions.length}} questions)</h1>
       <p id="time-out">10:00</p>
     </div>
 
