--- a/src/app/components/teacher-components/questions-list/questions-list.component.css
+++ b/src/app/components/teacher-components/questions-list/questions-list.component.css
@@ -56,4 +56,18 @@ mat-form-field button {
   border: none;
 }
 
+button {
+  background-color: #f3f3f3;
+  color: #343a40;
+  padding: 0.2rem 1.2rem;
+  border-radius: 2rem;
+  border: solid 1px #343a40;
+  transition: all 0.2s linear;
+  cursor: pointer;
+}
 
+button:hover {
+  background-color: #343a40;
+  color: #f3f3f3;
+  transition: all 0.2s linear;
+}
