--- a/src/app/components/home-components/menu-side-nav/menu-side-nav.component.css
+++ b/src/app/components/home-components/menu-side-nav/menu-side-nav.component.css
@@ -14,12 +14,12 @@
   padding: 0.6rem 0.4rem;
   transition: all 0.2s linear;
   border-radius: 0.5rem;
+  z-index: 300;
 }
 
 .activity-con:hover {
   background-color: #2d3236;
   transition: all 0.2s linear;
-
 }
 
 .activities-list {
@@ -34,4 +34,5 @@
   /*top: 0;*/
   height: 100%;
   z-index: 20 !important;
+
 }
